k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-cicd
  name: flask-cicd
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: flask-cicd
  type: ClusterIP
